<resources>
    <string name="app_name">Examen2</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnSalir">Salir</string>
    <string name="Calculadora">Calculadora</string>
    <string name="resultado">Resultado</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">*</string>
    <string name="division">/</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnRegresar">Regresar</string>
</resources>