<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculadora">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25sp">
        <TextView
            android:id="@+id/Calculadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/Calculadora"
            android:textSize="30sp"
            android:paddingBottom="10dp"
            android:textColor="@color/red"
            android:gravity="center"/>
        <TextView
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Usuario"
            android:textSize="25sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Num 1"
                android:paddingBottom="10dp">
            </TextView>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/txtNum1"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingBottom="10sp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textStart"
                android:text="Num 2"
                android:paddingBottom="10dp">
            </TextView>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/txtNum2"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingBottom="10sp">
            </EditText>
        </LinearLayout>
        <TextView
            android:id="@+id/txtresultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/resultado"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/red"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suma"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnResta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resta"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multi"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="18sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLimpiar"
            android:textSize="20dp"
            android:layout_marginTop="10dp">
        </Button>
        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegresar"
            android:textSize="20dp"
            android:layout_marginTop="10dp">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>